--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/start_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/start_scene.fxml
@@ -7,18 +7,17 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<StackPane prefHeight="760.0" prefWidth="1300.0" styleClass="rootPane" stylesheets="@../css/start_scene.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1"
->
+<StackPane prefHeight="760.0" prefWidth="1300.0" styleClass="rootPane" stylesheets="@../css/start_scene.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.startcontroller">
     <children>
         <Group scaleX="1.5" scaleY="1.5">
             <children>
                 <AnchorPane fx:id="rootPane" layoutX="184.0" layoutY="-111.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="797.0">
                     <children>
-                        <Button fx:id="playBtn" alignment="CENTER" layoutX="32.0" layoutY="296.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="351.0" styleClass="playBtn" stylesheets="@../css/start_scene.css" text="Start " textAlignment="CENTER" textFill="WHITE">
+                        <Button fx:id="playBtn" alignment="CENTER" layoutX="32.0" layoutY="296.0" mnemonicParsing="false" onAction="#switchToConnection" prefHeight="68.0" prefWidth="351.0" styleClass="playBtn" stylesheets="@../css/start_scene.css" text="Start " textAlignment="CENTER" textFill="WHITE">
                             <font>
                                 <Font name="Libian SC Regular" size="30.0" />
                             </font></Button>
-                        <Button fx:id="quitBtn" layoutX="422.0" layoutY="294.0" mnemonicParsing="false" prefHeight="68.0" prefWidth="351.0" styleClass="quitBtn" stylesheets="@../css/start_scene.css" text="Exit " textAlignment="CENTER" textFill="WHITE">
+                        <Button fx:id="quitBtn" layoutX="422.0" layoutY="294.0" mnemonicParsing="false" onMouseClicked="#closeJavaFxMain" prefHeight="68.0" prefWidth="351.0" styleClass="quitBtn" stylesheets="@../css/start_scene.css" text="Exit " textAlignment="CENTER" textFill="WHITE">
                             <font>
                                 <Font name="Libian SC Regular" size="30.0" />
                             </font>
@@ -49,4 +48,3 @@
         </Group>
     </children>
 </StackPane>
-
