--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -10,34 +10,34 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="507.0" prefWidth="692.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <BorderPane prefHeight="200.0" prefWidth="200.0">
+      <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-border-width: 10;">
          <center>
             <Group BorderPane.alignment="CENTER">
                <children>
-                  <AnchorPane prefHeight="400.0" prefWidth="400.0" styleClass="Board" stylesheets="@../css/livingBoard_scene.css">
+                  <AnchorPane layoutX="-20.0" layoutY="4.0" prefHeight="400.0" prefWidth="400.0" styleClass="Board" stylesheets="@../css/livingBoard_scene.css">
                      <children>
-                        <GridPane fx:id="board" gridLinesVisible="true" layoutX="25.0" layoutY="18.0" prefHeight="365.0" prefWidth="349.0">
+                        <GridPane fx:id="board" gridLinesVisible="true" hgap="4.0" layoutX="17.0" layoutY="18.0" prefHeight="363.0" prefWidth="363.0" vgap="4.0">
                           <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
                           </columnConstraints>
                           <rowConstraints>
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="39.077781677246094" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="38.92445373535156" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="39.07554626464844" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
                               <StackPane prefHeight="0.0" prefWidth="0.0" />
