--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -16,31 +16,112 @@
                <children>
                   <AnchorPane layoutX="-20.0" layoutY="4.0" prefHeight="400.0" prefWidth="400.0" styleClass="Board" stylesheets="@../css/livingBoard_scene.css">
                      <children>
-                        <GridPane fx:id="board" gridLinesVisible="true" hgap="4.0" layoutX="17.0" layoutY="18.0" prefHeight="363.0" prefWidth="363.0" vgap="4.0">
+                        <GridPane fx:id="board" gridLinesVisible="true" hgap="4.27" layoutX="17.0" layoutY="18.0" prefHeight="363.0" prefWidth="363.0" vgap="4.27">
                           <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="36.02" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
                           </columnConstraints>
                           <rowConstraints>
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="36.02" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <StackPane prefHeight="0.0" prefWidth="0.0" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="5" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="6" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="7" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="8" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="7" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="8" GridPane.rowIndex="1" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="7" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="8" GridPane.rowIndex="2" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="7" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="8" GridPane.rowIndex="3" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="7" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="8" GridPane.rowIndex="4" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.rowIndex="5" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="5" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="7" GridPane.rowIndex="5" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="8" GridPane.rowIndex="5" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.rowIndex="7" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.rowIndex="6" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="6" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="6" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="6" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="7" GridPane.rowIndex="6" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="8" GridPane.rowIndex="6" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="7" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="7" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="7" GridPane.rowIndex="7" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="8" GridPane.rowIndex="7" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.rowIndex="8" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="8" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="8" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="8" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="8" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="7" GridPane.rowIndex="8" />
+                              <StackPane prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="8" GridPane.rowIndex="8" />
+                              
                            </children>
                         </GridPane>
                      </children>
