livingBoard_scene.fxml and css update

--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/livingBoard_scene.css
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/css/livingBoard_scene.css
@@ -7,3 +7,20 @@
     -fx-background-image: url("../boards/livingroom.png");
     -fx-background-size: stretch;
 }
+
+.button {
+    -fx-background-image: url("../misc/base_pagina2.jpg");
+
+    -fx-border-color: transparent;
+    -fx-border-width: 0;
+    -fx-background-radius: 0;
+    -fx-border-radius: 15px;
+    -fx-background-color: transparent;
+}
+
+.button:hover {
+    -fx-effect: dropshadow(gaussian, #f2e0d6, 20, 0.3, 0, 0);
+    -fx-cursor: hand;
+
+
+}
