--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -1,51 +1,183 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="507.0" prefWidth="692.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.LivingBoardController">
-   <children>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-border-width: 10;">
-         <center>
-            <Group BorderPane.alignment="CENTER" scaleX="2.5" scaleY="2.5">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="761.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.LivingBoardController">
+    <children>
+        <BorderPane prefHeight="785.0" prefWidth="1512.0" style="-fx-border-width: 10;">
+            <center>
+                <Group BorderPane.alignment="CENTER">
+                    <children>
+                        <AnchorPane layoutX="-20.0" layoutY="4.0" prefHeight="646.0" prefWidth="658.0" styleClass="Board" stylesheets="@../css/livingBoard_scene.css">
+                            <children>
+                                <GridPane fx:id="board" gridLinesVisible="false" hgap="4.27" layoutX="21.0" layoutY="28.0" prefHeight="587.0" prefWidth="628.0" vgap="4.27">
+                                    <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
+                                    </columnConstraints>
+                                    <rowConstraints>
+                                        <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7.0" vgrow="SOMETIMES" />
+                                    </rowConstraints>
+                           <children>
+                              <StackPane prefHeight="56.0" prefWidth="68.0" rotate="10.8" GridPane.columnIndex="8" GridPane.rowIndex="7" />
+                           </children>
+
+                                </GridPane>
+                            </children>
+                        </AnchorPane>
+                    </children>
+                </Group>
+            </center>
+         <left>
+            <VBox prefHeight="766.0" prefWidth="374.0" BorderPane.alignment="CENTER">
                <children>
-                  <AnchorPane layoutX="-20.0" layoutY="4.0" prefHeight="400.0" prefWidth="400.0" styleClass="Board" stylesheets="@../css/livingBoard_scene.css">
+                  <Group>
                      <children>
-                        <GridPane fx:id="board" gridLinesVisible="false" hgap="4.27" layoutX="17.0" layoutY="18.0" prefHeight="363.0" prefWidth="363.0" vgap="4.27">
-                          <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="7.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="66.6" minHeight="10.0" prefHeight="7" vgrow="SOMETIMES" />
-                          </rowConstraints>
-
-                        </GridPane>
+                        <AnchorPane prefHeight="297.0" prefWidth="388.0">
+                           <children>
+                              <ImageView fitHeight="175.0" fitWidth="269.0" layoutX="34.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../common%20goal%20cards/12.jpg" />
+                                 </image>
+                              </ImageView>
+                              <StackPane layoutX="178.0" layoutY="146.0" prefHeight="62.0" prefWidth="62.0" rotate="-82.9">
+                                 <rotationAxis>
+                                    <Point3D z="-1.0" />
+                                 </rotationAxis>
+                                 <children>
+                                    <ImageView fitHeight="67.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true" />
+                                    <ImageView fitHeight="67.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true" />
+                                    <ImageView fitHeight="67.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true" />
+                                    <ImageView fitHeight="67.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true" />
+                                 </children>
+                              </StackPane>
+                              <Label layoutX="42.0" layoutY="19.0" prefHeight="79.0" prefWidth="318.0" text="Common Goal Cards" textFill="#fffdfd">
+                                 <font>
+                                    <Font name="Libian SC Regular" size="36.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </Group>
+                  <Group>
+                     <children>
+                        <AnchorPane prefHeight="220.0" prefWidth="374.0">
+                           <children>
+                              <ImageView fitHeight="169.0" fitWidth="258.0" layoutX="36.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../common%20goal%20cards/9.jpg" />
+                                 </image>
+                              </ImageView>
+                              <StackPane layoutX="173.0" layoutY="77.0" prefHeight="62.0" prefWidth="62.0" rotate="-96.6">
+                                 <children>
+                                    <ImageView fitHeight="64.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true" />
+                                    <ImageView fitHeight="67.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true" />
+                                    <ImageView fitHeight="67.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true" />
+                                    <ImageView fitHeight="67.0" fitWidth="65.0" pickOnBounds="true" preserveRatio="true" />
+                                 </children>
+                              </StackPane>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </Group>
+                  <Group />
+                  <AnchorPane prefHeight="224.0" prefWidth="371.0">
+                     <children>
+                        <Button layoutX="36.0" layoutY="33.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="303.0" text="NIckname'sBookshelf" textFill="WHITE">
+                           <font>
+                              <Font name="Libian SC Regular" size="15.0" />
+                           </font>
+                        </Button>
+                        <Button layoutX="36.0" layoutY="88.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="303.0" styleClass="button" stylesheets="@../css/livingBoard_scene.css" text="Nickname'sBookshelf" textFill="WHITE">
+                           <font>
+                              <Font name="Libian SC Regular" size="13.0" />
+                           </font>
+                        </Button>
+                        <Button layoutX="36.0" layoutY="144.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="303.0" text="Nickname'sBookshelf" textFill="WHITE">
+                           <font>
+                              <Font name="Libian SC Regular" size="13.0" />
+                           </font>
+                        </Button>
                      </children>
                   </AnchorPane>
                </children>
-            </Group>
-         </center>
-      </BorderPane>
-   </children>
+            </VBox>
+         </left>
+         <right>
+            <HBox prefHeight="507.0" prefWidth="466.0" BorderPane.alignment="CENTER">
+               <children>
+                  <AnchorPane prefHeight="787.0" prefWidth="495.0">
+                     <children>
+                        <ImageView fitHeight="69.0" fitWidth="70.0" layoutX="150.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../itemtiles/Piante1.1.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="68.0" fitWidth="71.0" layoutX="218.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../itemtiles/Gatti1.3.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="70.0" fitWidth="69.0" layoutX="284.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../itemtiles/Giochi1.2.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="343.0" fitWidth="337.0" layoutX="92.0" layoutY="192.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../boards/bookshelf.png" />
+                           </image>
+                        </ImageView>
+                        <RadioButton fx:id="Column1" layoutX="141.0" layoutY="161.0" mnemonicParsing="false" />
+                        <RadioButton fx:id="Column2" layoutX="200.0" layoutY="161.0" mnemonicParsing="false" />
+                        <RadioButton fx:id="Column4" layoutX="310.0" layoutY="161.0" mnemonicParsing="false" />
+                        <RadioButton fx:id="Column5" layoutX="368.0" layoutY="161.0" mnemonicParsing="false" />
+                        <RadioButton fx:id="Column3" layoutX="256.0" layoutY="161.0" mnemonicParsing="false" />
+                        <ImageView fitHeight="200.0" fitWidth="143.0" layoutX="208.0" layoutY="566.0">
+                           <image>
+                              <Image url="@../personal%20goal%20cards/Personal_Goals3.png" />
+                           </image>
+                        </ImageView>
+                        <Label layoutX="197.0" layoutY="532.0" prefHeight="23.0" prefWidth="174.0" text="Personal Goal Card" textFill="WHITE">
+                           <font>
+                              <Font name="Libian SC Regular" size="24.0" />
+                           </font></Label>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </HBox>
+         </right>
+        </BorderPane>
+    </children>
 </StackPane>
