--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/FirstPlayer_Scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/FirstPlayer_Scene.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.FirstPlayerController">
     <children>
             <Group scaleX="2.45" scaleY="1.9">
                 <children>
@@ -47,7 +48,7 @@
                                     <Image url="@../itemtiles/Trofei1.1.png" />
                                 </image>
                             </ImageView>
-                            <TextField layoutX="233.0" layoutY="304.0" styleClass="rounded-input" stylesheets="@../css/server_scene.css" />
+                            <TextField fx:id="GameName" layoutX="233.0" layoutY="304.0" styleClass="rounded-input" stylesheets="@../css/server_scene.css" />
                             <Label layoutX="186.0" layoutY="162.0" prefHeight="68.0" prefWidth="309.0" text="choose the number of players:" textFill="WHITE">
                                 <font>
                                     <Font name="Libian SC Regular" size="24.0" />
@@ -58,21 +59,26 @@
                                     <Font name="Libian SC Regular" size="24.0" />
                                 </font>
                             </Label>
-                  <RadioButton layoutX="203.0" layoutY="205.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="12.0" text="2">
+                  <RadioButton fx:id="two_players" layoutX="203.0" layoutY="205.0" mnemonicParsing="false" onMouseClicked="#two_p" prefHeight="50.0" prefWidth="12.0" text="2">
                      <font>
                         <Font name="Libian SC Regular" size="18.0" />
                      </font>
                   </RadioButton>
-                  <RadioButton layoutX="292.0" layoutY="205.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="12.0" text="3">
+                  <RadioButton fx:id="three_players" layoutX="292.0" layoutY="205.0" mnemonicParsing="false" onMouseClicked="#three_p" prefHeight="50.0" prefWidth="12.0" text="3">
                      <font>
                         <Font name="Libian SC Regular" size="18.0" />
                      </font>
                   </RadioButton>
-                  <RadioButton layoutX="385.0" layoutY="207.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="12.0" text="4">
+                  <RadioButton fx:id="four_players" layoutX="385.0" layoutY="207.0" mnemonicParsing="false" onMouseClicked="#four_p" prefHeight="50.0" prefWidth="12.0" text="4">
                      <font>
                         <Font name="Libian SC Regular" size="18.0" />
                      </font>
                   </RadioButton>
+                  <Button fx:id="ok" layoutX="294.0" layoutY="334.0" mnemonicParsing="false" onMouseClicked="#GameNameChosen" text="ok" textFill="#fffdfd">
+                     <font>
+                        <Font name="Libian SC Regular" size="13.0" />
+                     </font>
+                  </Button>
                         </children>
                     </AnchorPane>
                 </children>
