--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/livingBoard_scene.fxml
@@ -1,26 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.geometry.Point3D?>
-<?import javafx.scene.Group?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="761.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.LivingBoardController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="761.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.LivingBoardController">
     <children>
         <BorderPane prefHeight="785.0" prefWidth="1512.0" style="-fx-border-width: 10;">
             <center>
@@ -90,7 +77,7 @@
                             <children>
                                 <AnchorPane prefHeight="297.0" prefWidth="388.0">
                                     <children>
-                                        <ImageView fitHeight="175.0" fitWidth="269.0" layoutX="34.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
+                                        <ImageView fx:id="commonGoalCardView1" fitHeight="175.0" fitWidth="269.0" layoutX="34.0" layoutY="136.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
                                                 <Image url="@../common%20goal%20cards/12.jpg" />
                                             </image>
@@ -129,7 +116,7 @@
                             <children>
                                 <AnchorPane prefHeight="220.0" prefWidth="374.0">
                                     <children>
-                                        <ImageView fitHeight="175.0" fitWidth="269.0" layoutX="36.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+                                        <ImageView fx:id="commonGoalCardView2" fitHeight="175.0" fitWidth="269.0" layoutX="36.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
                                                 <Image url="@../common%20goal%20cards/9.jpg" />
                                             </image>
