--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/start_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/start_scene.fxml
@@ -1,75 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Group?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.RadialGradient?>
-<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/start_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.StartController">
     <children>
-        <Group scaleX="1.5" scaleY="1.5">
-            <children>
-                <AnchorPane fx:id="rootPane" layoutX="184.0" layoutY="-111.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="797.0">
-                    <children>
-                        <Button fx:id="playBtn" alignment="CENTER" layoutX="63.0" layoutY="300.0" mnemonicParsing="false" onAction="#switchToConnection" prefHeight="102.0" prefWidth="200.0" styleClass="playBtn" stylesheets="@../css/start_scene.css" text="Create a new game" textAlignment="CENTER" textFill="WHITE">
-                            <font>
-                                <Font name="Libian SC Regular" size="24.0" />
-                            </font></Button>
-                        <Button fx:id="quitBtn" layoutX="276.0" layoutY="300.0" mnemonicParsing="false" onMouseClicked="#closeJavaFxMain" prefHeight="102.0" prefWidth="200.0" styleClass="quitBtn" stylesheets="@../css/start_scene.css" text="Join a game" textAlignment="CENTER" textFill="WHITE">
-                            <font>
-                                <Font name="Libian SC Regular" size="24.0" />
-                            </font>
-                            <textFill>
-                                <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
-                                    <stops>
-                                        <Stop>
-                                            <color>
-                                                <Color />
-                                            </color>
-                                        </Stop>
-                                        <Stop offset="1.0">
-                                            <color>
-                                                <Color red="1.0" green="1.0" blue="1.0" />
-                                            </color>
-                                        </Stop>
-                                    </stops>
-                                </RadialGradient>
-                            </textFill></Button>
-                        <ImageView fitHeight="173.0" fitWidth="458.0" layoutX="170.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                        <ImageView fitHeight="425.0" fitWidth="904.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../Publisher_material/Title 2000x618px.png" />
                             </image>
                         </ImageView>
-                  <Button fx:id="quitBtn1" layoutX="489.0" layoutY="300.0" mnemonicParsing="false" onMouseClicked="#closeJavaFxMain" prefHeight="102.0" prefWidth="200.0" styleClass="quitBtn" stylesheets="@../css/start_scene.css" text="Exit " textAlignment="CENTER">
-                     <textFill>
-                        <RadialGradient centerY="1.0" radius="0.5">
-                           <stops>
-                              <Stop>
-                                 <color>
-                                    <Color />
-                                 </color>
-                              </Stop>
-                              <Stop offset="1.0">
-                                 <color>
-                                    <Color red="1.0" green="1.0" blue="1.0" />
-                                 </color>
-                              </Stop>
-                           </stops>
-                        </RadialGradient>
-                     </textFill>
-                     <font>
-                        <Font name="Libian SC Regular" size="24.0" />
-                     </font>
-                  </Button>
-                    </children>
-                </AnchorPane>
-            </children>
-        </Group>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="394.0" prefWidth="1495.0">
+               <children>
+                  <VBox prefHeight="409.0" prefWidth="575.0">
+                     <children>
+                              <Button fx:id="playBtn" alignment="CENTER" mnemonicParsing="false" onAction="#switchToConnection" prefHeight="90.0" prefWidth="575.0" styleClass="playBtn" stylesheets="@../css/start_scene.css" text="Create a new game" textAlignment="CENTER" textFill="#fffcfc">
+                                  <font>
+                                      <Font name="Libian SC Regular" size="40.0" />
+                                  </font>
+                           <VBox.margin>
+                              <Insets bottom="30.0" />
+                           </VBox.margin>
+                        </Button>
+                              <Button fx:id="quitBtn" mnemonicParsing="false" onMouseClicked="#closeJavaFxMain" prefHeight="90.0" prefWidth="575.0" styleClass="quitBtn" stylesheets="@../css/start_scene.css" text="Join a game" textAlignment="CENTER" textFill="#fffcfc">
+                                  <font>
+                                      <Font name="Libian SC Regular" size="40.0" />
+                                  </font>
+                           <VBox.margin>
+                              <Insets bottom="30.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button fx:id="quitBtn1" mnemonicParsing="false" onMouseClicked="#closeJavaFxMain" prefHeight="90.0" prefWidth="575.0" styleClass="quitBtn" stylesheets="@../css/start_scene.css" text="Exit " textAlignment="CENTER" textFill="#fffcfc">
+                           <font>
+                              <Font name="Libian SC Regular" size="40.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                     <HBox.margin>
+                        <Insets top="20.0" />
+                     </HBox.margin>
+                  </VBox>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
     </children>
 </StackPane>
