--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameName_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameName_scene.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,7 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.FirstPlayerController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="908.0" prefWidth="1510.0" styleClass="rootPane" stylesheets="@../css/livingBoard_scene.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.FXML.GameNameController">
     <children>
             <Group scaleX="2.45" scaleY="1.9">
                 <children>
@@ -48,37 +47,22 @@
                                     <Image url="@../itemtiles/Trofei1.1.png" />
                                 </image>
                             </ImageView>
-                            <TextField fx:id="GameName" layoutX="233.0" layoutY="304.0" styleClass="rounded-input" stylesheets="@../css/server_scene.css" />
-                            <Label layoutX="186.0" layoutY="162.0" prefHeight="68.0" prefWidth="309.0" text="choose the number of players:" textFill="WHITE">
+                            <TextField fx:id="GameName" layoutX="233.0" layoutY="224.0" styleClass="rounded-input" stylesheets="@../css/server_scene.css" />
+                            <Label layoutX="186.0" layoutY="182.0" text="choose the name of the game:" textFill="WHITE">
                                 <font>
                                     <Font name="Libian SC Regular" size="24.0" />
                                 </font>
                             </Label>
-                            <Label layoutX="186.0" layoutY="262.0" text="choose the name of the game:" textFill="WHITE">
-                                <font>
-                                    <Font name="Libian SC Regular" size="24.0" />
-                                </font>
-                            </Label>
-                  <RadioButton fx:id="two_players" layoutX="203.0" layoutY="205.0" mnemonicParsing="false" onMouseClicked="#two_p" prefHeight="50.0" prefWidth="12.0" text="2">
-                     <font>
-                        <Font name="Libian SC Regular" size="18.0" />
-                     </font>
-                  </RadioButton>
-                  <RadioButton fx:id="three_players" layoutX="292.0" layoutY="205.0" mnemonicParsing="false" onMouseClicked="#three_p" prefHeight="50.0" prefWidth="12.0" text="3">
-                     <font>
-                        <Font name="Libian SC Regular" size="18.0" />
-                     </font>
-                  </RadioButton>
-                  <RadioButton fx:id="four_players" layoutX="385.0" layoutY="207.0" mnemonicParsing="false" onMouseClicked="#four_p" prefHeight="50.0" prefWidth="12.0" text="4">
-                     <font>
-                        <Font name="Libian SC Regular" size="18.0" />
-                     </font>
-                  </RadioButton>
-                  <Button fx:id="ok" layoutX="294.0" layoutY="334.0" mnemonicParsing="false" onMouseClicked="#GameNameChosen" text="ok" textFill="#fffdfd">
+                  <Button fx:id="ok" layoutX="294.0" layoutY="264.0" mnemonicParsing="false" onMouseClicked="#GameNameChosen" text="ok" textFill="#fffdfd">
                      <font>
                         <Font name="Libian SC Regular" size="13.0" />
                      </font>
                   </Button>
+                  <Label fx:id="AlredytTakenGameName" layoutX="11.0" layoutY="280.0" prefHeight="71.0" prefWidth="612.0" text="The game name is already taken, please choose another game name" textFill="#d33939" visible="false">
+                     <font>
+                        <Font name="Libian SC Regular" size="24.0" />
+                     </font>
+                  </Label>
                         </children>
                     </AnchorPane>
                 </children>
