--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/lobby_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/lobby_scene.fxml
@@ -21,7 +21,7 @@
                   <Font name="Libian SC Regular" size="72.0" />
                </font>
             </Label>
-            <Label fx:id="numPinLobby" layoutX="330.0" layoutY="249.0" text="players currently in the lobby X/X" textFill="WHITE">
+            <Label fx:id="numPinLobby" layoutX="330.0" layoutY="249.0" textFill="WHITE">
                <font>
                   <Font name="Libian SC Regular" size="64.0" />
                </font>
@@ -32,10 +32,17 @@
                </image>
             </ImageView>
             <ImageView fitHeight="366.0" fitWidth="1516.0" layoutX="-7.0" layoutY="560.0">
-               <image>
-                  <Image url="@../Publisher_material/banner%201386x400px.png" />
-               </image>
             </ImageView>
+            <Label fx:id="NumberOfMissingPlayers" layoutX="437.0" layoutY="328.0" prefHeight="38.0" prefWidth="299.0" text="Missing Plaeyers number: " textFill="WHITE" visible="false">
+               <font>
+                  <Font name="Libian SC Regular" size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="PlayerJoinedGame" layoutX="431.0" layoutY="271.0" text="Name  joined the Game " textFill="WHITE" visible="false">
+               <font>
+                  <Font name="Libian SC Regular" size="36.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
