--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/login_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/login_scene.fxml
@@ -41,29 +41,34 @@
                   <Insets bottom="60.0" />
                </VBox.margin>
             </VBox>
+                  <Label prefHeight="54.0" prefWidth="330.0" text="Choose a Nickname" textFill="WHITE">
+                      <font>
+                          <Font name="Libian SC Regular" size="36.0" />
+                      </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+                  </Label>
+                  <TextField fx:id="nicknameTextFiled" alignment="CENTER" maxHeight="500.0" maxWidth="500.0" prefHeight="49.0" prefWidth="500.0" promptText="insert your nickname..." styleClass="rounded-input" stylesheets="@../css/server_scene.css">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </TextField>
+                  <Button fx:id="OKButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
+                      <font>
+                          <Font size="28.0" />
+                      </font>
+                  </Button>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                        <Label prefHeight="54.0" prefWidth="330.0" text="Choose a Nickname" textFill="WHITE">
-                            <font>
-                                <Font name="Libian SC Regular" size="36.0" />
-                            </font>
-                     <VBox.margin>
-                        <Insets bottom="20.0" />
-                     </VBox.margin>
-                        </Label>
-                        <TextField fx:id="nicknameTextFiled" alignment="CENTER" maxHeight="500.0" maxWidth="500.0" prefHeight="49.0" prefWidth="500.0" promptText="insert your nickname..." styleClass="rounded-input" stylesheets="@../css/server_scene.css">
-                     <VBox.margin>
-                        <Insets bottom="20.0" />
-                     </VBox.margin>
+                  <Label fx:id="InvalidNickname" text="Invalid nickname, please choose another one" textFill="#e84646" visible="false">
                      <font>
-                        <Font size="21.0" />
+                        <Font name="Libian SC Regular" size="64.0" />
                      </font>
-                  </TextField>
-                        <Button fx:id="OKButton" mnemonicParsing="false" onMouseClicked="#connect" prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
-                            <font>
-                                <Font size="28.0" />
-                            </font>
-                        </Button>
+                  </Label>
                </children>
             </VBox>
             <VBox alignment="BOTTOM_CENTER" prefHeight="301.0" prefWidth="1510.0">
