--- a/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
+++ b/MyShelfie/src/main/resources/it/polimi/ingsw/client/view/FXML/GameNameList_scene.fxml
@@ -57,7 +57,7 @@
                         <Font size="21.0" />
                     </font>
                 </TextField>
-                <Button fx:id="OKButton" mnemonicParsing="false"  prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
+                <Button fx:id="OKButton" mnemonicParsing="false" onMouseClicked="#GameNameChosen" prefHeight="59.0" prefWidth="156.0" styleClass="button" stylesheets="@../css/server_scene.css" text="OK" textFill="WHITE">
                     <font>
                         <Font size="28.0" />
                     </font>
